--- a/src/main/resources/static/css/tp-form.css
+++ b/src/main/resources/static/css/tp-form.css
@@ -39,7 +39,7 @@ form h1 {
 }
 
 .create-account {
-	padding: 15px 40px;
+	padding: 15px;
 	border: 2px solid black;
 	background-color: white;
 	cursor: pointer;
@@ -49,4 +49,9 @@ form h1 {
 	text-decoration: none;
 	color: black;
 	margin: 0 auto;
+	width: 100%;
+}
+
+.login-panel {
+	max-width: 500px;		
 }
