fix: filtre without duplicates

--- a/src/main/resources/templates/view-articles.html
+++ b/src/main/resources/templates/view-articles.html
@@ -37,9 +37,9 @@
 									<label for="achats">Achats</label>
 								</div>
 								<select class="select-box" id="list-filtre-achats" name="typeAchat">
-									<option value="ouvert">Enchères ouvertes</option>
-									<option value="enCours">Mes enchères en cours</option>
-									<option value="remportees">Mes enchères remportées</option>
+									<option value="0">Enchères ouvertes</option>
+									<option value="1">Mes enchères en cours</option>
+									<option value="2">Mes enchères remportées</option>
 								</select>
 								<div class="filtres-radio">
 									<input type="radio" id="ventes" name="type"> <label
