--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,12 +6,12 @@
 					ressourcesSupp=~{})}">
 
 <head>
-<title data-th-text="Encheres"></title>
+<title data-th-text="#{Index.title}"></title>
 </head>
 <body>
 	<main class="center-main">
 		<section class="center-section">
-			<h1 style="text-align: center;" data-th-text="Eni-Encheres"></h1>
+			<h1 style="text-align: center;" data-th-text="#{Index.h1}"></h1>
 		</section>
 	</main>
 </body>
