--- a/src/main/resources/templates/layouts/layout.html
+++ b/src/main/resources/templates/layouts/layout.html
@@ -7,11 +7,13 @@
 <link rel="stylesheet" data-th-href="@{/css/bootstrap.min.css}">
 <link rel="stylesheet" data-th-href="@{/css/layout.css}">
 <link rel="stylesheet" data-th-href="@{/css/general.css}">
+<link rel="stylesheet" data-th-href="@{/css/general.css}">
 
 <th:block data-th-replace="${ressourcesSupp} ?: ~{}"></th:block>
 
 <link rel="icon" data-th-href="@{/images/logoENI.png}" sizes="32x32">
 <script data-th-src="@{/js/bootstrap.min.js}"></script>
+<script data-th-src="@{/js/global.js}"></script>
 
 <link rel="icon" data-th-href="@{/images/logo-auction.png}" sizes="32x32">
 </head>
