--- a/src/main/resources/templates/view-article-creer.html
+++ b/src/main/resources/templates/view-article-creer.html
@@ -6,7 +6,7 @@
 					)}">
 
 <head>
-	<title data-th-text="Encheres"></title>
+	<title data-th-text="#{Index.title}"></title>
 	<th:block id="ressources-css">
 		<link rel="stylesheet" href="/css/creerArticle.css">
 		<link rel="stylesheet" href="/css/tp-error.css">
