feat : error page

--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <!-- Mise en place du layout -->
 <html xmlns:th="http://www.thymeleaf.org"
-	data-th-replace="~{layouts/layout :: layout-demo(titrePage=~{:: title},
-contenuPage=~{:: main},
-ressourcesSupp=~{:: #ressources-css})}">
+	data-th-replace="~{layouts/layout :: layout-enchere( 
+					titrePage=~{:: title},
+					contenuPage=~{:: main},
+					ressourcesSupp=~{:: #ressources-css}
+					)}">
 <head>
 <meta charset="UTF-8">
 <title data-th-text="#{error.http.title}"></title>
