--- a/src/main/resources/templates/fragments/fragment-profil-form.html
+++ b/src/main/resources/templates/fragments/fragment-profil-form.html
@@ -110,7 +110,7 @@
 			</div>
 		</th:block>		
 		<div class="col-md-3 d-none d-md-block py-2 text-center">
-			<button class="btn btn-secondary" type="button" data-th-text="#{Profil.btn.annuler}"></button>
+			<a id="btnRetour" class="btn btn-secondary" data-th-text="#{Profil.btn.annuler}" ></a>
 		</div>
 	</div>
 </form>
