--- a/src/main/resources/templates/view-password-modifier.html
+++ b/src/main/resources/templates/view-password-modifier.html
@@ -27,7 +27,7 @@
 				<button id="bouton-soumettre" class="btn btn-primary" type="submit" data-th-text="#{Profil.btn.modifier}"></button>
 			</div>
 			<div class="col-md-5 d-none d-md-block py-2 text-center">
-				<button class="btn btn-secondary" type="submit" data-th-text="#{Profil.btn.annuler}"></button>
+				<a id="btnRetour" class="btn btn-secondary" data-th-text="#{Profil.btn.annuler}" ></a>
 			</div>
 		</form>
 	</main>
