feat : error page

--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -17,20 +17,35 @@
 </head>
 <body>
 	<main>
-		<h1 class="cards" data-th-text="#{error.http.h1} + ${status}"></h1>
-		<form>
+		<div data-th-if="${customError}">
 			<ul class="flex-outer cards">
-				<li data-th-switch="${status}">
-					<label data-th-case="403" data-th-text="#{error.http.label.403}"></label>
-					<label data-th-case="404" data-th-text="#{error.http.label.404}"></label>
-					<label data-th-case="500" data-th-text="#{error.http.label.500}"></label>
-					<label data-th-case="*" data-th-text="#{error.http.label.other}"></label>
+				<li>
+					<p data-th-text="${customError}"></p>
 				</li>
 				<li>
 					<a data-th-href="@{/}" data-th-text="#{error.http.button}"></a>
 				</li>
 			</ul>
-		</form>
+		</div>
+		<div data-th-unless="${customError}">
+			<h1 class="cards" data-th-text="#{error.http.h1} + ${(status ne null)?status:'Inconnu'}"></h1>
+			<form>
+				<ul class="flex-outer cards">
+					<li data-th-switch="${status}">
+						<label data-th-case="403" data-th-text="#{error.http.label.403}"></label>
+						<label data-th-case="404" data-th-text="#{error.http.label.404}"></label>
+						<label data-th-case="500" data-th-text="#{error.http.label.500}"></label>
+						<label data-th-case="*" data-th-text="#{error.http.label.other}"></label>
+					</li>
+					<li data-th-if="${customError ne null}">
+						<p data-th-text="${customError}"></p>
+					</li>
+					<li>
+						<a data-th-href="@{/}" data-th-text="#{error.http.button}"></a>
+					</li>
+				</ul>
+			</form>
+		</div>
 	</main>
 </body>
 </html>
