--- a/src/main/resources/templates/view-articles.html
+++ b/src/main/resources/templates/view-articles.html
@@ -17,87 +17,117 @@
 <body>
 	<main>
 		<section class="entete-encheres">
-			<h3 style="text-align: center;" data-th-text="#{articles.titre}">Liste des enchères</h3>
-				<form class="container" action="/articles/filtrer" method="GET">
-					<div class="filtres">
-						<label data-th-text="#{articles.filtre}">Filtres :</label> 
-						<input type="text" id="nomArticle" name="nomArticle" class="input-text" data-th-placeholder="#{articles.filtre.input}" data-th-value="${param.nomArticle}"> 
-						<label for="category" data-th-text="#{articles.categorie}">Catégorie :</label> 
-						<select id="idCategorie" name="idCategorie" class="select-box" >
-							<option value=0>Toutes</option>
-							<option data-th-each="categorie : ${CategoriesEnSession}"
-								data-th-text="${categorie.libelle}"
-								data-th-value="${categorie.id}"></option>
-						</select>
-						<th:block
-							data-th-if="${#authorization.expression('isAuthenticated()')}">
-							<div class="filtres-radios">
-								<div class="filtres-radio">
-									<input type="radio" id="achats" name="type" checked> 
-									<label for="achats" data-th-text="#{articles.achats}">Achats</label>
-								</div>
-								<select class="select-box" id="list-filtre-achats" name="typeAchat">
-									<option value="0">Enchères ouvertes</option>
-									<option value="1">Mes enchères en cours</option>
-									<option value="2">Mes enchères remportées</option>
-								</select>
-								<div class="filtres-radio">
-									<input type="radio" id="ventes" name="type"> <label
-										for="ventes" data-th-text="#{articles.ventes}">Mes ventes</label>
-								</div>
-								<select class="filtres-select" id="list-filtre-ventes" name="idVente" disabled>
-									<option value="0" data-th-text="#{articles.vente1}">Mes ventes non débutées</option>
-									<option value="1" data-th-text="#{articles.vente2}">Mes ventes en cours</option>
-									<option value="2" data-th-text="#{articles.vente3}">Mes ventes terminées</option>
-								</select>
+			<h3 style="text-align: center;" data-th-text="#{articles.titre}">Liste
+				des enchères</h3>
+			<form class="container" action="/articles/filtrer" method="GET">
+				<div class="filtres">
+					<label data-th-text="#{articles.filtre}">Filtres :</label> <input
+						type="text" id="nomArticle" name="nomArticle" class="input-text"
+						data-th-placeholder="#{articles.filtre.input}"
+						data-th-value="${param.nomArticle}"> <label for="category"
+						data-th-text="#{articles.categorie}">Catégorie :</label> <select
+						id="idCategorie" name="idCategorie" class="select-box">
+						<option value=0>Toutes</option>
+						<option data-th-each="categorie : ${CategoriesEnSession}"
+							data-th-text="${categorie.libelle}"
+							data-th-value="${categorie.id}"></option>
+					</select>
+					<th:block
+						data-th-if="${#authorization.expression('isAuthenticated()')}">
+						<div class="filtres-radios">
+							<div class="filtres-radio">
+								<input type="radio" id="achats" name="type" checked> <label
+									for="achats" data-th-text="#{articles.achats}">Achats</label>
 							</div>
-						</th:block>
-					</div>
-	
-					<div class="btn-filtres">
-						<button type="submit" class="btn" data-th-text="#{articles.rechercher}">Rechercher</button>
-						<a class="btn" href="/articles" data-th-text="#{articles.annuler}">Annuler</a>
-					</div>
-				</form>
+							<select class="select-box" id="list-filtre-achats"
+								name="typeAchat">
+								<option value="0">Enchères ouvertes</option>
+								<option value="1">Mes enchères en cours</option>
+								<option value="2">Mes enchères remportées</option>
+							</select>
+							<div class="filtres-radio">
+								<input type="radio" id="ventes" name="type"> <label
+									for="ventes" data-th-text="#{articles.ventes}">Mes
+									ventes</label>
+							</div>
+							<select class="filtres-select" id="list-filtre-ventes"
+								name="idVente" disabled>
+								<option value="0" data-th-text="#{articles.vente1}">Mes
+									ventes non débutées</option>
+								<option value="1" data-th-text="#{articles.vente2}">Mes
+									ventes en cours</option>
+								<option value="2" data-th-text="#{articles.vente3}">Mes
+									ventes terminées</option>
+							</select>
+						</div>
+					</th:block>
+				</div>
+
+				<div class="btn-filtres">
+					<button type="submit" class="btn"
+						data-th-text="#{articles.rechercher}">Rechercher</button>
+					<a class="btn" href="/articles" data-th-text="#{articles.annuler}">Annuler</a>
+				</div>
+			</form>
 
 		</section>
 		<section class="cards">
 			<div class="card mb-8" style="max-width: 540px;"
 				data-th-each="article : ${articles}">
-				
-					<div class="row g-0">
-						<div class="col-md-4">
-							<img src="" class="img-fluid rounded-start"
-								th:alt="#{articles.image.text}">
-						</div>
-						<div class="col-md-8">
-							<div class="card-body">
-							
-								<th:block data-th-if="${#authorization.expression('isAuthenticated()')}">
-									<a data-th-href="@{/articles/detail(id=${article.id})}" style="color: inherit;">
+
+				<div class="row g-0">
+					<div class="col-md-4">
+						<img src="" class="img-fluid rounded-start"
+							th:alt="#{articles.image.text}">
+					</div>
+					<div class="col-md-8">
+						<div class="card-body">
+
+							<th:block
+								data-th-if="${#authorization.expression('isAuthenticated()')}">
+								<th:block
+									data-th-if="${membreEnSession.pseudo == article.vendeur.pseudo and article.dateDebutEncheres.isAfter(T(java.time.LocalDate).now())}">
+									<a
+										data-th-href="@{/articles/modifier(idArticle=${article.id})}"
+										style="color: inherit;">
+										<h5 class="card-title" data-th-text="${article.nom}">Titre
+											Article</h5>
+									</a>
+								</th:block>
+								<th:block
+									data-th-unless="${membreEnSession.pseudo == article.vendeur.pseudo and article.dateDebutEncheres.isAfter(T(java.time.LocalDate).now())}">
+									<a data-th-href="@{/articles/detail(id=${article.id})}"
+										style="color: inherit;">
 										<h5 class="card-title" data-th-text="${article.nom}">Titre Article</h5>
 									</a>
 								</th:block>
-								
-								<th:block data-th-unless="${#authorization.expression('isAuthenticated()')}">
-                              		<h5 class="card-title" data-th-text="${article.nom}">Titre Article</h5>
-								</th:block>
-								
-								<th:block th:if="${article.prixVente == 0}">
-									<p class="card-text"
-										data-th-text="#{articles.prix} + ' ' +${article.prixInitial} + ' point(s)'">Prix</p>
-								</th:block>
-								<th:block th:unless="${article.prixVente == 0}">
-									<p class="card-text"
-										data-th-text="#{articles.prix} + ' ' + ${article.prixVente} + ' point(s)'">Prix</p>
-								</th:block>
-								<p class="card-text" data-th-text="#{articles.dateFin} + ' ' + ${article.dateFinEncheres}">Fin de l'enchère</p>
-								<a class="card-text" data-th-href="@{/profil/view?utilisateurPseudo=__${article.vendeur.pseudo}__}" data-th-text="#{articles.vendeur} + ' ' + ${article.vendeur.pseudo}">Vendeur</a>
-								
-							</div>
+							</th:block>
+
+							<th:block
+								data-th-unless="${#authorization.expression('isAuthenticated()')}">
+								<h5 class="card-title" data-th-text="${article.nom}">Titre
+									Article</h5>
+							</th:block>
+
+							<th:block th:if="${article.prixVente == 0}">
+								<p class="card-text"
+									data-th-text="#{articles.prix} + ' ' +${article.prixInitial} + ' point(s)'">Prix</p>
+							</th:block>
+							<th:block th:unless="${article.prixVente == 0}">
+								<p class="card-text"
+									data-th-text="#{articles.prix} + ' ' + ${article.prixVente} + ' point(s)'">Prix</p>
+							</th:block>
+							<p class="card-text"
+								data-th-text="#{articles.dateFin} + ' ' + ${article.dateFinEncheres}">Fin
+								de l'enchère</p>
+							<a class="card-text"
+								data-th-href="@{/profil/view?utilisateurPseudo=__${article.vendeur.pseudo}__}"
+								data-th-text="#{articles.vendeur} + ' ' + ${article.vendeur.pseudo}">Vendeur</a>
+
 						</div>
 					</div>
-				
+				</div>
+
 			</div>
 		</section>
 	</main>
